# parallel-radiosity

./: .gitignore
solver/: README.md  commands.txt  run.sh
solver/inputs/: input.txt
solver/mesh/: hash.h  mesh.h  vector.h  vertex.h
solver/src/: CMakeLists.txt  calculate.cu  clockcycle.h  compile_commands.json  fp.h  main.cpp  test.c
solver/src/.cache/clangd/index/: argparser.h.20D563BE721728AF.idx  clockcycle.h.15667FCA8D9CF316.idx  edge.h.9CC4A916D553FA7D.idx  face.h.1AA394CB1AA63771.idx  fp.h.5DE5BC5DB489D360.idx  hash.h.D23C9FBF6E722938.idx  hit.h.CB2ADE263A4448C6.idx  image.h.F1D7AC96CD778E83.idx  main.cpp.693CE2FA31BF0454.idx  material.h.06D3480E87CDD432.idx  mesh.h.31EA2A1295132A7F.idx  meshdata.h.CF5486FD63B385C7.idx  ray.h.72CCBFAD100217FD.idx  raytracer.h.3E6DF6A82BD0EF80.idx  utils.h.A76FD001A9ED64E1.idx  vectors.h.49AD35AFA50B37C8.idx  vertex.h.F2E9E74EDC4B4CF5.idx
solver/src/mesh/: argparser.cpp  argparser.h  boundingbox.h  face.cpp  hit.h  image.cpp  material.h  mesh.cpp  mesh.h  meshdata.cpp  meshdata.h  photon_mapping.cpp  primitive.h  radiosity.cpp  raytracer.cpp  sphere.h
solver/src/radiosity/: radiosity.h
visualizer/src/: CMakeLists.txt  FindGLFW.cmake  MetalInfo.plist  MetalMTKView.m  OpenGLCanvas.cpp  README.txt  argparser.cpp  argparser.h  kdtree.cpp  main.cpp  photon_mapping.h  radiosity.cpp  radiosity.h  raytracer.cpp  raytracer.h  raytree.cpp  raytree.h  utils.h
visualizer/src/args/: argparser.cpp
visualizer/src/legacy/: kdtree.h  photon.h  ray.h  raytracer.h  raytree.h
visualizer/src/mesh/: face.h  material.cpp  material.h  mesh.cpp  mesh.h  radiosity.cpp  radiosity.h  sphere.cpp  vertex.h
writeup/: main.tex
(+8 files in other folders)
